# ArgumentsManager

./: .gitignore  README.md  linux_build.sh  win_build.bat
Source/: ArgsManager.cpp  ArgsManager.h  Argument.cpp  Argument.h  CMakeLists.txt  InvalidArg.h  InvalidParameter.h
Test/: ArgsManagerTest.cpp  Auxiliary.h  Test.vcxproj
docs/html/: _args_manager_8h_source.html  _argument_8h_source.html  _invalid_arg_8h_source.html  _invalid_parameter_8h_source.html  annotated.html  class_args_manager-members.html  class_args_manager.html  class_args_manager_1_1_provides.html  class_argument-members.html  class_argument.html  class_argument_1_1_the.html  class_invalid_arg-members.html  class_invalid_arg.html  classes.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  struct_arg_content-members.html  struct_arg_content.html  structstd_1_1hash_3_01_argument_01_4-members.html  structstd_1_1hash_3_01_argument_01_4.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  functions_0.js  functions_4.js  functions_5.js  pages_0.js  (+2 more)
docs/latex/: _args_manager_8h_source.tex  _argument_8h_source.tex  _invalid_arg_8h_source.tex  _invalid_parameter_8h_source.tex  annotated.tex  class_args_manager.tex  class_args_manager_1_1_provides.tex  class_argument.tex  class_argument_1_1_the.tex  class_invalid_arg.eps  class_invalid_arg.tex  files.tex  hierarchy.tex  index.tex  refman.tex  struct_arg_content.tex  structstd_1_1hash_3_01_argument_01_4.tex
examples/: main.cpp
